build: depend on clutter
Signed-off-by: Marc-Antoine Perennou <Marc-Antoine@Perennou.com>

--- a/configure.ac
+++ b/configure.ac
@@ -31,8 +31,13 @@ GTK_MIN_MAJOR="3"
 GTK_MIN_MINOR="10"
 GDK_API_REQUIRED="G_ENCODE_VERSION($GTK_MIN_MAJOR, $GTK_MIN_MINOR)"
 
+CLUTTER_MIN_MAJOR="1"
+CLUTTER_MIN_MINOR="16"
+CLUTTER_API_REQUIRED="G_ENCODE_VERSION($CLUTTER_MIN_MAJOR, $CLUTTER_MIN_MINOR)"
+
 GLIB_REQUIRED="$GLIB_MIN_MAJOR.$GLIB_MIN_MINOR.0"
 GTK_REQUIRED="$GTK_MIN_MAJOR.$GTK_MIN_MINOR.0"
+CLUTTER_REQUIRED="$CLUTTER_MIN_MAJOR.$CLUTTER_MIN_MINOR.0"
 
 GIR_REQUIRED="1.31.1"
 VALA_REQUIRED="0.14"
@@ -116,6 +121,8 @@ AC_DEFINE_UNQUOTED([GLIB_VERSION_MIN_REQUIRED], [$GLIB_API_REQUIRED], [The lower
 AC_DEFINE_UNQUOTED([GLIB_VERSION_MAX_ALLOWED], [$GLIB_API_REQUIRED], [The higher GLib API version supported])
 AC_DEFINE_UNQUOTED([GDK_VERSION_MIN_REQUIRED], [$GDK_API_REQUIRED], [The lower Gdk API version supported])
 AC_DEFINE_UNQUOTED([GDK_VERSION_MAX_ALLOWED], [$GDK_API_REQUIRED], [The higher Gdk API version supported])
+AC_DEFINE_UNQUOTED([CLUTTER_VERSION_MIN_REQUIRED], [$CLUTTER_API_REQUIRED], [The lower Clutter API version supported])
+AC_DEFINE_UNQUOTED([GLUTTER_VERSION_MAX_ALLOWED], [$CLUTTER_API_REQUIRED], [The higher Clutter API version supported])
 
 GETTEXT_PACKAGE=$PACKAGE_NAME
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [Gettext Package])
@@ -158,6 +165,8 @@ PKG_CHECK_MODULES(XML, [libxml-2.0])
 
 PKG_CHECK_MODULES(X11, [x11 xi xtst])
 AC_CHECK_HEADERS([X11/extensions/XInput2.h])
+
+PKG_CHECK_MODULES(CLUTTER, [clutter-1.0 >= $CLUTTER_REQUIRED])
 
 AC_ARG_WITH([controlcenterdir],
             AS_HELP_STRING([--with-controlcenterdir=DIR], [Gnome control-center keybindings directory]),
